<resources>
    -------------==\\Test//==-------------
    <!--<string name="ad_unit_id_Home_Banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_unit_id_Collection_Interstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_unit_id_Search_Interstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>-->
    -------------==\\Work//==-------------
    <string name="ad_unit_id_Home_Banner" translatable="false">ca-app-pub-0973407020138517/1231381531</string>
    <string name="ad_unit_id_Collection_Interstitial" translatable="false">ca-app-pub-0973407020138517/1465161735</string>
    <string name="ad_unit_id_Search_Interstitial" translatable="false">ca-app-pub-0973407020138517/6821425964</string>

    /Название приложения
    <string name="app_name" translatable="false">Paizogram</string>
    <string name="title_activity_main" translatable="false">Paizogram</string>

    //(Fragment) Домашняя страница
    <string name="title_home">Home</string>
    <string name="view_title_favorite_phrases">Favorite phrases</string>
    <string name="view_title_category">Category</string>

    --(Activity) Выборка Фаворитного аудио
    <string name="title_select_favaudio">Select a phrase</string>

    //(Fragment) Страница поиска
    <string name="title_online_search">Online Search</string>

    //(Fragment) Страница  Категорий/Наборов/Аудиозапией
    <string name="title_dashboard">Dashboard</string>
    <string name="title_сategories">Categories</string>
    <string name="title_sets">Sets</string>

    --(Dialog) Добавление нового набора
    <string name="dialog_title_adding_set">Add a set</string>
    <string name="message_set_added">Set added</string>

    --(Dialog) Редактирование набора
    <string name="dialog_title_editing_set">Edit a set</string>

    --(Dialog) Удаления набора
    <string name="dialog_title_delete_set">Delete set</string>
    <string name="dialog_text_delete_set">Are you sure you want to delete the set?\nIt will be impossible to undo the action</string>
    <string name="message_set_deleted">Set deleted</string>
    <string name="view_text_delete_all">Delete all entries</string>

    --(Activity) Добавление новой аудиозаписи(фразы)
    <string name="title_adding">Adding</string>

    ---(Fragment) Добавление уже имеющихся фраз
    <string name="title_select_phrases">Select phrases</string>

    ---(Fragment) Запись новой фразы
    <string name="title_dictaphone">Dictaphone</string>

    ---(Fragment) Загрузка фраз
    <string name="title_upload_phrase">Upload phrase</string>

    --(Dialog) Редактирование фразы
    <string name="dialog_title_edit_phrase">Edit phrase</string>

    --(Dialog) Удаления фразы
    <string name="dialog_title_delete_phrase">Delete phrase</string>
    <string name="dialog_text_delete_phrase">Do you really want to delete the phrase?\nIt will be impossible to undo the action</string>
    <string name="message_phrase_deleted">Phrase deleted</string>

    //(Fragment) Аккаунт
    <string name="title_account">Account</string>
    <string name="view_text_title_vk">VK community</string>
    <string name="view_text_message_vk">Here you can leave requests to add your sets</string>
    <string name="view_text_account">Your account will be here!</string>

    //Общии
    -Сообщения
    <string name="message_saved">Saved</string>
    <string name="message_phrase_loaded">Phrase loaded</string>
    <string name="message_changes_saved">Changes saved</string>

    -Элементы
    <string name="view_title">Title</string>

    <string name="view_text">Text</string>
    <string name="view_text_empty">Empty</string>
    <string name="view_text_expect_next_update">Expect next update!</string>
    <string name="view_text_name">Name</string>
    <string name="view_text_remove">Remove</string>
    <string name="view_text_executor">Executor</string>
    <string name="view_text_author">Author</string>
    <string name="view_text_upload_file">Upload file</string>
    <string name="view_text_no_internet_connection">No internet connection available</string>

    <string name="view_btn_choose">Choose</string>
    <string name="view_btn_save">Save</string>
    <string name="view_btn_edit">Edit</string>
    <string name="view_btn_cancel">Later</string>
    <string name="view_btn_delete">Delete</string>
    <string name="view_btn_search">Search</string>
    <string name="view_btn_positioning">Positioning</string>
    <string name="view_btn_repeat">Repeat</string>
</resources>