<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_black_36"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/round_dashboard_black_36"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_search"
        android:icon="?android:attr/actionModeWebSearchDrawable"
        android:title="@string/title_search"
        android:visible="false" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/title_account"
        android:visible="false" />

</menu>