<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/view_title"
        android:textAppearance="@style/TextStylePrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@id/etNameSound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorTextPrimary"
        android:ems="10"
        android:hint="@string/view_text_name"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextStylePrimary"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextSecondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/etExecutorSound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:autofillHints="" />

    <EditText
        android:id="@id/etExecutorSound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorTextPrimary"
        android:ems="10"
        android:hint="@string/view_text_executor"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextStylePrimary"
        android:textColor="@color/colorTextSecondary"
        android:textColorHint="@color/colorTextSecondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/etNameSound"
        app:layout_constraintStart_toStartOf="@id/etNameSound"
        app:layout_constraintTop_toBottomOf="@id/etNameSound"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSelectAudiofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/view_btn_choose"
        android:textAppearance="@style/TextStylePrimary"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etExecutorSound" />

    <TextView
        android:id="@+id/tvNameAudiofile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/view_text_upload_file"
        android:textAppearance="@style/TextStyleSecondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/btnSelectAudiofile"
        app:layout_constraintEnd_toEndOf="@id/etExecutorSound"
        app:layout_constraintStart_toEndOf="@id/btnSelectAudiofile"
        app:layout_constraintTop_toTopOf="@id/btnSelectAudiofile" />

    <Button
        android:id="@id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/view_btn_save"
        android:textAppearance="@style/TextStylePrimary"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>