<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:clickable="false"
    android:minWidth="350dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <Button
        android:id="@+id/dialogBtnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:text="@string/view_btn_cancel"
        android:textAppearance="@style/TextStylePrimary"
        android:textColor="@color/colorSecondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialogBtnYes"
        app:layout_constraintTop_toBottomOf="@+id/chbCheckFullDel" />

    <Button
        android:id="@+id/dialogBtnYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/view_btn_delete"
        android:textAppearance="@style/TextStylePrimary"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dialogBtnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialogBtnCancel" />

    <CheckBox
        android:id="@+id/chbCheckFullDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/colorSecondary"
        android:fontFamily="@font/fira_sans"
        android:text="@string/view_text_delete_all"
        android:textColor="@color/colorTextPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/dialogTvText"
        app:layout_constraintTop_toBottomOf="@+id/dialogTvText" />

    <TextView
        android:id="@+id/dialogTvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/view_text"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextStyleSecondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dialogTvTitle"
        app:layout_constraintTop_toBottomOf="@+id/dialogTvTitle" />

    <TextView
        android:id="@+id/dialogTvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/view_title"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextStylePrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>